--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,8 @@ security:
             security: false
         main:
             anonymous: lazy
+            json_login:
+                check_path: /login
             # provider: app_user_provider
             logout: ~
             guard:
