--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,9 @@ security:
             json_login:
                 check_path: /login
             # provider: app_user_provider
-            logout: ~
+            logout:
+                path: logout
+                success_handler: App\Security\LogoutSuccessHandler
             guard:
                 authenticators:
                     - App\Security\TokenAuthenticator
